--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
           <button class="pure-button pure-button-primary calc">Calcular</button>
         <!--</fieldset>-->
-      </form>
+      </div>
 
       <div class="results" hidden>
         <p>Massa Molar: <span class="rmass"></span></p>
@@ -41,6 +41,14 @@
       </div>
 
     </div>
+
+    <div class="footer-hint-wrapper">
+      <span class="footer-hint"></span>
+    </div>
+
+    <footer class="footer">
+
+    </footer>
 
 
     <script src="app.js"></script>
